--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <meta name="format-detection" content="telephone=no" />
         <title></title>
         <!-- inject:css -->
         <!-- endinject -->
@@ -10,8 +12,8 @@
         <!-- endinject -->
     </head>
     <body ng-app="MapBuilder">
-        <div ui-view="dashboard"></div>
-        
+        <div ui-view="dashboard" class="map-builder"></div>
+
         <!-- inject:js -->
         <!-- endinject -->
     </body>
