--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <meta name="format-detection" content="telephone=no" />
-        <title></title>
+        <title>Map Builder</title>
         <!-- inject:css -->
         <!-- endinject -->
 
