--- a/index.html
+++ b/index.html
@@ -6,15 +6,31 @@
         <meta name="format-detection" content="telephone=no" />
         <title>Map Builder</title>
         <!-- inject:css -->
-        <!-- endinject -->
+        <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+        <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.min.css">
+        <link rel="stylesheet" href="bower_components/Materialize/dist/css/materialize.min.css">
 
-        <!-- vender:js -->
+        <link rel="stylesheet" href="sass/main.css">
         <!-- endinject -->
     </head>
     <body ng-app="MapBuilder">
         <div ui-view="dashboard" class="map-builder"></div>
 
+        <!-- vender:js -->
+        <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-aria/angular-aria.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-material/angular-material.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-messages/angular-messages.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+        <script src="bower_components/Materialize/dist/js/materialize.min.js" type="text/javascript"></script>
+        <!-- endinject -->
         <!-- inject:js -->
+        <script src="coffee/app.js" type="text/javascript"></script>
+        <script src="coffee/controller/dashboardCtrl.js" type="text/javascript"></script>
+        <script src="coffee/controller/homeCtrl.js" type="text/javascript"></script>
+        <script src="coffee/service/emojiService.js" type="text/javascript"></script>
         <!-- endinject -->
     </body>
 </html>
