--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <link rel="stylesheet" href="sass/main.css">
         <!-- endinject -->
+
+
     </head>
     <body ng-app="MapBuilder">
         <div ui-view="dashboard" class="map-builder"></div>
@@ -26,10 +28,12 @@
         <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
         <script src="bower_components/Materialize/dist/js/materialize.min.js" type="text/javascript"></script>
         <!-- endinject -->
+
         <!-- inject:js -->
         <script src="coffee/app.js" type="text/javascript"></script>
         <script src="coffee/controller/dashboardCtrl.js" type="text/javascript"></script>
         <script src="coffee/controller/homeCtrl.js" type="text/javascript"></script>
+        <script src="coffee/controller/emojiCtrl.js" type="text/javascript"></script>
         <script src="coffee/service/emojiService.js" type="text/javascript"></script>
         <!-- endinject -->
     </body>
