--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <script src="coffee/controller/dashboardCtrl.js" type="text/javascript"></script>
         <script src="coffee/controller/homeCtrl.js" type="text/javascript"></script>
         <script src="coffee/controller/emojiCtrl.js" type="text/javascript"></script>
+        <script src="coffee/controller/mapCtrl.js" type="text/javascript"></script>
         <script src="coffee/service/emojiService.js" type="text/javascript"></script>
+        <script src="coffee/directive/directive.js" type="text/javascript"></script>
         <!-- endinject -->
     </body>
 </html>
