--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
         <script src="bower_components/Materialize/dist/js/materialize.min.js" type="text/javascript"></script>
+        <script src="bower_components/emojione/lib/js/emojione.min.js" type="text/javascript"></script>
         <!-- endinject -->
 
         <!-- inject:js -->
