--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="bower_components/Materialize/dist/css/materialize.min.css">
 
         <link rel="stylesheet" href="sass/main.css">
+        <link rel="stylesheet" href="sass/directive.css">
         <!-- endinject -->
 
 
