--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <script src="coffee/controller/emojiCtrl.js" type="text/javascript"></script>
         <script src="coffee/controller/mapCtrl.js" type="text/javascript"></script>
         <script src="coffee/service/emojiService.js" type="text/javascript"></script>
+        <script src="coffee/service/utilService.js" type="text/javascript"></script>
         <script src="coffee/directive/directive.js" type="text/javascript"></script>
         <!-- endinject -->
     </body>
